syntax = "proto3";

package userproto;

service UserService {
    rpc getUsers(getBooksRequest) returns (getUsersResponse) {}
}

message getBooksRequest{

}

message getUsersResponse {
    repeated User users = 1;
}

message User {
    int32 id = 1;
    string name = 2;
}